# event-sourcing-python

./: .dockerignore  Dockerfile  README.md  app.py  architecture-flow.mermaid  container.py  pyproject.toml  requirements.txt
common/aggregate/: aggregate.py
common/ambar/: ambar_auth.py  ambar_http_request.py  ambar_response_factory.py
common/command/: command.py  command_controller.py  command_handler.py
common/event/: creation_event.py  event.py  transformation_event.py
common/event_store/: aggregate_and_event_ids_in_last_event.py  postgres_transactional_event_store.py
common/projection/: mongo_transactional_projection_operator.py  projection_controller.py  projection_handler.py
common/query/: query_controller.py  query_handler.py
common/reaction/: reaction_controller.py  reaction_handler.py
common/serialized_event/: deserializer.py  serialized_event.py  serializer.py
common/util/: id_generator.py  logger.py  mongo_initializer.py  mongo_session_pool.py  postgres_connection_pool.py  postgres_initializer.py
local-development/: ambar-config.yaml  docker-compose.yml
local-development/build-files/frontend-database-explorer/: Dockerfile
local-development/docker-scripts/linux/: dev_demo.sh
local-development/docker-scripts/windows/: dev_demo.ps1  dev_shutdown.ps1  dev_start.ps1  dev_start_with_data_deletion.ps1
local-development/podman-scripts/linux/: dev_start.sh  dev_start_with_data_deletion.sh
local-development/podman-scripts/mac/: dev_shutdown.sh  dev_start.sh
local-development/podman-scripts/windows/: dev_shutdown.ps1  dev_start.ps1  (+1 more)
(+17 files in other folders)
